--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
         "maatwebsite/excel": "^3.1",
+        "rap2hpoutre/fast-excel": "^1.7",
         "yajra/laravel-datatables-oracle": "^9.9"
     },
     "require-dev": {
