--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,9 @@
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
-        "yajra/laravel-datatables-oracle": "~9.0"
+        "maatwebsite/excel": "^3.1",
+        "rap2hpoutre/fast-excel": "^1.7",
+        "yajra/laravel-datatables-oracle": "^9.9"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
