--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,6 @@
 /public/hot
 /public/storage
 /storage/*.key
-
 /vendor
 .env
 .env.backup
@@ -12,3 +11,8 @@ Homestead.yaml
 npm-debug.log
 yarn-error.log
 .idea/workspace.xml
+/.idea
+/.vscode
+
+
+
